test/fixtures/invalid/test-unmatched-for.fez
<script>
  onInit() {
    this.state.items = [1, 2, 3]
  }
</script>

{{for item in state.items}}
  <div>{{ item }}</div>
